Ignore extra bytes in the PDF DocumentLoader.

In the overrun case, if the server specifies a given Content-Length in
the header and then sends more than the expected amount of data,
truncate the input at the expected size.

Also try to handle the underrun case by saving whatever pending data
can be saved.

BUG=825829

Change-Id: I0502ed14f9fa8c888030b89bb58c429f16f4540b
Reviewed-on: https://chromium-review.googlesource.com/984154
Commit-Queue: Lei Zhang <thestig@chromium.org>
Reviewed-by: dsinclair <dsinclair@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546551}
Former-commit-id: 32094aacf709159a4535bcba0521fe58b125ce09